<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        />


    <TextView
        android:text="@string/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/map"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toLeftOf="@+id/map"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_startTime"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        tools:text="2017-01-17T06:35:57+00:00"
        android:layout_marginTop="8dp" />

    <TextView
        android:text="@string/start_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tv_startTime"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_startTime"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_startLocation"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        tools:text="132 Arthus St, North Sydney" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/tv_startLocation"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_startLocation"
        android:text="@string/end_time"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_endTime"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        tools:text="2017-01-17T06:35:57+00:00" />

    <TextView
        android:text="@string/end_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tv_endTime"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_endTime"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_endLocation"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView7"
        tools:text="132 Arthus St, North Sydney" />

    <Button
        android:text="@string/start_shift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_shift"
        app:layout_constraintTop_toBottomOf="@+id/tv_endLocation"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:padding="15dp"
        android:background="@drawable/button_selector"
        android:textColor="@android:color/white"
        android:onClick="updateShift"/>
</android.support.constraint.ConstraintLayout>
